--- a/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/UserControls/WeaponsControl.xaml
@@ -53,37 +53,28 @@
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="3" Margin="0,20.2,0,10" HorizontalAlignment="Right">
-            <TextBox x:Name="txtNaam"    Width="165" FontSize="15" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Naam"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="2,0,0,0"/>
-
-            <ComboBox x:Name="cmbDbCategorie" Width="120" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Categorie"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="5,0,0,5"/>
-
-            <ComboBox x:Name="cmbDbZeldzaamheid" Width="120" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Zeldzaamheid"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="5,0,0,5"/>
-
-            <ComboBox x:Name="cmbDbDamagetype" Width="110" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Damagetype"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="5,0,0,5"/>
-
-            <TextBox x:Name="txtImpact"    Width="66" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Impact"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="5,0,0,0" />
-
-            <TextBox x:Name="txtRange"    Width="66" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Range"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="5,0,0,0" />
-
-            <TextBox x:Name="txtMagazine"    Width="78" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Magazine"  materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,2,1" BorderBrush="#fff"
-  VerticalAlignment="Bottom" Padding="2,0,0,0" />
-
-            <TextBox x:Name="txtLight" Width="70" FontSize="14" HorizontalAlignment="Center"
-  materialDesign:HintAssist.Hint="Light" materialDesign:TextFieldAssist.UnderlineBrush="#333" BorderThickness="0,0,0,1"
-  VerticalAlignment="Bottom" Padding="2,0,0,0"/>
+            <DataGrid x:Name="dbText" Grid.Row="2" Grid.ColumnSpan="3"  AutoGenerateColumns="False" SelectionChanged="dbWapens_SelectionChanged" HorizontalAlignment="Center" Margin="5,20,5,10">
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="Background" Value="#333" />
+                        <Setter Property="FontWeight" Value="Bold" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="Padding" Value="6"/>
+                        <Setter Property="BorderThickness" Value="0,0,2,0"></Setter>
+                        <Setter Property="BorderBrush" Value="#fff"/>
+                    </Style>
+                </DataGrid.Resources>
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Naam" Width="165"/>
+                    <DataGridTextColumn Header="Categorie" Width="120"/>
+                    <DataGridTextColumn Header="Zeldzaamheid" Width="120"/>
+                    <DataGridTextColumn Header="Damagetype" Width="110"/>
+                    <DataGridTextColumn Header="Impact" Width="66"/>
+                    <DataGridTextColumn Header="Range" Width="66"/>
+                    <DataGridTextColumn Header="Magazine" Width="78"/>
+                    <DataGridTextColumn Header="Light" Width="70"/>
+                </DataGrid.Columns>
+            </DataGrid>
         </WrapPanel>
 
         <Button x:Name="btnAddWeapon" Content="Voeg wapen toe" Grid.Row="4" Margin="10,10,10,20"/>
