--- a/Oef_Project_Destiny/Project_Destiny_WPF/LogInWindow.xaml
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/LogInWindow.xaml
@@ -23,9 +23,10 @@
             <TextBox Name="txtGebruikersnaam" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
             <Label Content="Wachtwoord" Foreground="#00FFFF" />
             <PasswordBox Name="txtWachtwoord" Background="#555555" Foreground="White" FontSize="18" Padding="2,0,0,0"/>
-            <Button x:Name="BtnInloggen" Content="Inloggen" Background="#555555" Foreground="White" BorderBrush="{x:Null}" Margin="70,30" RenderTransformOrigin="0.49,-0.153" Click="BtnInloggen_Click"/>
+            <Button x:Name="BtnInloggen" Content="Inloggen" Background="#555555" Foreground="White" BorderBrush="{x:Null}" Margin="70,30,70,15" RenderTransformOrigin="0.49,-0.153" Click="BtnInloggen_Click"/>
+            <Button x:Name="BtnWachtwoordVergeten" Content="Wachtwoord vergeten?" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnWachtwoordVergeten_Click"/>
             <Button x:Name="BtnGeenAccount" Content="Nog geen account?" Foreground="White" Background="{x:Null}" BorderBrush="{x:Null}" Click="BtnGeenAccount_Click"/>
-
+    
 
         </StackPanel>
     </Grid>
